src/component/alert_panel/snapshots/envision__component__alert_panel__snapshot_tests__snapshot_all_critical.snap
---
source: src/component/alert_panel/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌ All Critical (2 CRIT) ───────────────────────────────────────────────────────┐
│┌CPU──────────────────────────────────┐┌Memory───────────────────────────────┐│
││✖ CRIT  95.0%                        ││✖ CRIT  98.0%                        ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
│└─────────────────────────────────────┘└─────────────────────────────────────┘│
└──────────────────────────────────────────────────────────────────────────────┘
