src/component/alert_panel/snapshots/envision__component__alert_panel__snapshot_tests__snapshot_all_ok.snap
---
source: src/component/alert_panel/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌ All OK (2 OK) ───────────────────────────────────────────────────────────────┐
│┌CPU──────────────────────────────────┐┌Memory───────────────────────────────┐│
││● OK  30.0%                          ││● OK  40.0%                          ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
│└─────────────────────────────────────┘└─────────────────────────────────────┘│
└──────────────────────────────────────────────────────────────────────────────┘
