src/component/alert_panel/snapshots/envision__component__alert_panel__snapshot_tests__snapshot_disabled.snap
---
source: src/component/alert_panel/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌ Alerts (2 OK, 1 WARN, 1 CRIT) ───────────────────────────────────────────────┐
│┌CPU Usage────────────────────────────┐┌Memory───────────────────────────────┐│
││● OK  45.2%                          ││▲ WARN  82.5%                        ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
│└─────────────────────────────────────┘└─────────────────────────────────────┘│
│┌Disk I/O─────────────────────────────┐┌Error Rate───────────────────────────┐│
││● OK  12.0MB/s                       ││✖ CRIT  6.2%                         ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
│└─────────────────────────────────────┘└─────────────────────────────────────┘│
└──────────────────────────────────────────────────────────────────────────────┘
