src/component/alert_panel/snapshots/envision__component__alert_panel__snapshot_tests__snapshot_single_metric.snap
---
source: src/component/alert_panel/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌ Alerts (1 OK) ───────────────────────┐
│┌CPU Usage───────────────────────────┐│
││● OK  50.0%                         ││
││                                    ││
││                                    ││
││                                    ││
││                                    ││
││                                    ││
│└────────────────────────────────────┘│
└──────────────────────────────────────┘
