src/component/alert_panel/snapshots/envision__component__alert_panel__snapshot_tests__snapshot_with_sparklines.snap
---
source: src/component/alert_panel/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌ Alerts (1 OK, 1 WARN) ───────────────────────────────────────────────────────┐
│┌CPU──────────────────────────────────┐┌Memory───────────────────────────────┐│
││● OK  65.0%                          ││▲ WARN  81.0%                        ││
││       █                             ││       █                             ││
││      ▄█                             ││      ▄█                             ││
││      ██                             ││      ██                             ││
││     ███                             ││     ███                             ││
││    ▅███                             ││    ▅███                             ││
││   ▁████                             ││   ▁████                             ││
││   █████                             ││   █████                             ││
││  ▆█████                             ││  ▆█████                             ││
││ ▃██████                             ││ ▃██████                             ││
││ ███████                             ││ ███████                             ││
│└─────────────────────────────────────┘└─────────────────────────────────────┘│
└──────────────────────────────────────────────────────────────────────────────┘
