src/component/alert_panel/snapshots/envision__component__alert_panel__snapshot_tests__snapshot_with_thresholds.snap
---
source: src/component/alert_panel/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌ Alerts (1 OK, 1 WARN) ───────────────────────────────────────────────────────┐
│┌CPU──────────────────────────────────┐┌Memory───────────────────────────────┐│
││▲ WARN  75.0%                        ││● OK  50.0%                          ││
││W:70 C:90                            ││W:80 C:95                            ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
││                                     ││                                     ││
│└─────────────────────────────────────┘└─────────────────────────────────────┘│
└──────────────────────────────────────────────────────────────────────────────┘
