src/component/alert_panel/snapshots/envision__component__alert_panel__snapshot_tests__view_chrome_owned_no_outer_border.snap
---
source: src/component/alert_panel/snapshot_tests.rs
expression: terminal.backend().to_string()
---
┌CPU Usage───────────────────┐┌Memory──────────────────────┐
│● OK  45.2%                 ││▲ WARN  82.5%               │
│                            ││                            │
│                            ││                            │
│                            ││                            │
└────────────────────────────┘└────────────────────────────┘
┌Disk I/O────────────────────┐┌Error Rate──────────────────┐
│● OK  12.0MB/s              ││✖ CRIT  6.2%                │
│                            ││                            │
│                            ││                            │
│                            ││                            │
└────────────────────────────┘└────────────────────────────┘
